--- a/karos.html
+++ b/karos.html
@@ -6,15 +6,18 @@
   <title>𝗞𝗥𝗦® │Development</title>
 </head>
 
-<body>
 
-  <h1 class="titolo">KRS SCELTA DI VITA</h1>
+<body>
+  
+<body class="sfondo">
+
+  <h1 class="titolo">𝗞𝗥𝗦®  LIFE CHOICE</h1>
   
 
   <div class="boxkaros">
     <div class="civil box" onclick="selectCivil()">
-      <h1 class="title">Civile</h1>
-      <div class="description">Scegli la strada giusta!</div>
+      <h1 class="title">Civil</h1>
+      <div class="description">Choose the right path!</div>
       <img class="image" src="civil.png" alt="">
     </div>
   </div>
@@ -22,7 +25,7 @@
   <div class="boxkaros2">
     <div class="gangster box" onclick="selectGangster()">
       <h1 class="title">Gangster</h1>
-      <div class="description">Scegli la strada giusta!</div>
+      <div class="description">Choose the right path!</div>
       <img class="image" src="gangster.png" alt="">
     </div>
   </div>
@@ -30,21 +33,21 @@
   <div class="boxkaros3">
     <div class="mafia box" onclick="selectMafia()">
       <h1 class="title">Mafia</h1>
-      <div class="description">Scegli la strada giusta!</div>
+      <div class="description">Choose the right path!</div>
       <img class="image" src="mafia.png" alt="">
     </div>
   </div>
 
   <div class="boxkaros4">
     <div class="imprenditore box" onclick="selectImprenditore()">
-      <h1 class="title">Imprenditore</h1>
-      <div class="description">Scegli la strada giusta!</div>
+      <h1 class="title">Entrepreneur</h1>
+      <div class="description">Choose the right path!</div>
       <img class="image" src="imprenditore.png" alt="">
     </div>
   </div>
 
 </body>
-
+</body>
 </html>
 
 
